--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.adfa40e0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.04b200eb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.73c07623.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0000f160.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.85d1b2ea.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.03e590ad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.79a65843.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_90egpd = {
+					__sveltekit_1ogxa8g = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -23,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.adfa40e0.js"),
-						import("./_app/immutable/entry/app.0000f160.js")
+						import("./_app/immutable/entry/start.04b200eb.js"),
+						import("./_app/immutable/entry/app.03e590ad.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
